jftt/3lab/blex/calc_y.output
Grammar

    0 $accept: input $end

    1 input: ε
    2      | input line

    3 line: '\n'
    4     | expr '\n'
    5     | error '\n'

    6 expr: "number"
    7     | expr '+' expr
    8     | expr '-' expr
    9     | expr '*' expr
   10     | expr '/' expr
   11     | expr '^' expr
   12     | '-' expr
   13     | '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 3 4 5
    '(' (40) 13
    ')' (41) 13
    '*' <int> (42) 9
    '+' <int> (43) 7
    '-' <int> (45) 8 12
    '/' <int> (47) 10
    '^' <int> (94) 11
    error (256) 5
    "number" <int> (258) 6
    NEG <int> (259)


Nonterminals, with rules where they appear

    $accept (13)
        on left: 0
    input (14)
        on left: 1 2
        on right: 0 2
    line (15)
        on left: 3 4 5
        on right: 2
    expr <int> (16)
        on left: 6 7 8 9 10 11 12 13
        on right: 4 7 8 9 10 11 12 13


State 0

    0 $accept: • input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input • $end
    2 input: input • line

    $end      shift, and go to state 2
    error     shift, and go to state 3
    "number"  shift, and go to state 4
    '-'       shift, and go to state 5
    '\n'      shift, and go to state 6
    '('       shift, and go to state 7

    line  go to state 8
    expr  go to state 9


State 2

    0 $accept: input $end •

    $default  accept


State 3

    5 line: error • '\n'

    '\n'  shift, and go to state 10


State 4

    6 expr: "number" •

    $default  reduce using rule 6 (expr)


State 5

   12 expr: '-' • expr

    "number"  shift, and go to state 4
    '-'       shift, and go to state 5
    '('       shift, and go to state 7

    expr  go to state 11


State 6

    3 line: '\n' •

    $default  reduce using rule 3 (line)


State 7

   13 expr: '(' • expr ')'

    "number"  shift, and go to state 4
    '-'       shift, and go to state 5
    '('       shift, and go to state 7

    expr  go to state 12


State 8

    2 input: input line •

    $default  reduce using rule 2 (input)


State 9

    4 line: expr • '\n'
    7 expr: expr • '+' expr
    8     | expr • '-' expr
    9     | expr • '*' expr
   10     | expr • '/' expr
   11     | expr • '^' expr

    '+'   shift, and go to state 13
    '-'   shift, and go to state 14
    '*'   shift, and go to state 15
    '/'   shift, and go to state 16
    '^'   shift, and go to state 17
    '\n'  shift, and go to state 18


State 10

    5 line: error '\n' •

    $default  reduce using rule 5 (line)


State 11

    7 expr: expr • '+' expr
    8     | expr • '-' expr
    9     | expr • '*' expr
   10     | expr • '/' expr
   11     | expr • '^' expr
   12     | '-' expr •

    '^'  shift, and go to state 17

    $default  reduce using rule 12 (expr)


State 12

    7 expr: expr • '+' expr
    8     | expr • '-' expr
    9     | expr • '*' expr
   10     | expr • '/' expr
   11     | expr • '^' expr
   13     | '(' expr • ')'

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '*'  shift, and go to state 15
    '/'  shift, and go to state 16
    '^'  shift, and go to state 17
    ')'  shift, and go to state 19


State 13

    7 expr: expr '+' • expr

    "number"  shift, and go to state 4
    '-'       shift, and go to state 5
    '('       shift, and go to state 7

    expr  go to state 20


State 14

    8 expr: expr '-' • expr

    "number"  shift, and go to state 4
    '-'       shift, and go to state 5
    '('       shift, and go to state 7

    expr  go to state 21


State 15

    9 expr: expr '*' • expr

    "number"  shift, and go to state 4
    '-'       shift, and go to state 5
    '('       shift, and go to state 7

    expr  go to state 22


State 16

   10 expr: expr '/' • expr

    "number"  shift, and go to state 4
    '-'       shift, and go to state 5
    '('       shift, and go to state 7

    expr  go to state 23


State 17

   11 expr: expr '^' • expr

    "number"  shift, and go to state 4
    '-'       shift, and go to state 5
    '('       shift, and go to state 7

    expr  go to state 24


State 18

    4 line: expr '\n' •

    $default  reduce using rule 4 (line)


State 19

   13 expr: '(' expr ')' •

    $default  reduce using rule 13 (expr)


State 20

    7 expr: expr • '+' expr
    7     | expr '+' expr •
    8     | expr • '-' expr
    9     | expr • '*' expr
   10     | expr • '/' expr
   11     | expr • '^' expr

    '*'  shift, and go to state 15
    '/'  shift, and go to state 16
    '^'  shift, and go to state 17

    $default  reduce using rule 7 (expr)


State 21

    7 expr: expr • '+' expr
    8     | expr • '-' expr
    8     | expr '-' expr •
    9     | expr • '*' expr
   10     | expr • '/' expr
   11     | expr • '^' expr

    '*'  shift, and go to state 15
    '/'  shift, and go to state 16
    '^'  shift, and go to state 17

    $default  reduce using rule 8 (expr)


State 22

    7 expr: expr • '+' expr
    8     | expr • '-' expr
    9     | expr • '*' expr
    9     | expr '*' expr •
   10     | expr • '/' expr
   11     | expr • '^' expr

    '^'  shift, and go to state 17

    $default  reduce using rule 9 (expr)


State 23

    7 expr: expr • '+' expr
    8     | expr • '-' expr
    9     | expr • '*' expr
   10     | expr • '/' expr
   10     | expr '/' expr •
   11     | expr • '^' expr

    '^'  shift, and go to state 17

    $default  reduce using rule 10 (expr)


State 24

    7 expr: expr • '+' expr
    8     | expr • '-' expr
    9     | expr • '*' expr
   10     | expr • '/' expr
   11     | expr • '^' expr
   11     | expr '^' expr •

    '^'  shift, and go to state 17

    $default  reduce using rule 11 (expr)
